...
        TextField(
            onValueChange = { result ->
                onUpdateForm(
                    uiState.formData.copy(name = result)
                )
            },
            placeholder = "Enter company name",
            value = uiState.formData.name,
            title = "Company Name",
            required = true,
            singleLine = true,
            isError = uiState.formError.name != null,
            textError = uiState.formError.name
...
                    uiState.formData.copy(
                        orderList = newList
                    )
                )
            },
            type = TypeButton.OUTLINED,
            text = "Supplied Item",
            leadingIcon = R.drawable.ic_add_fill_24dp,
            modifier = Modifier.fillMaxWidth()
        )
        // Order Item List
        uiState.formData.orderList.forEachIndexed { index, orderItem ->
            OrderItemRow(
...
                        uiState.formData.copy(
                            orderList = newList
                        )
                    )
                }
            },
            placeHolder = "Select item name",
            items = availableItemOptions,
            value = orderItem.item.name,
            title = "Item Name",
            required = true,
            modifier = Modifier.fillMaxWidth(if (isMultiItem) 0.4f else 0.5f)
        )
...
                onUpdateForm(
                    uiState.formData.copy(
                        orderList = newList
                    )
                )
            },
            placeHolder = "Select SKU",
            items = DataDummy.generateOptionsDataString(orderItem.item.avalaibleSKUs.map { it.id }),
            value = orderItem.orderedSku.map { it.id },
            title = "SKU",
            required = true,
            isUseChip = true,
            enabled = orderItem.item.name.isNotEmpty(),
...
