...
) {
    if (showDialog && assets.isNotEmpty()) {
        val isSingle = assets.size == 1

        val dialogState = when (status) {
            Status.DELETE -> DialogState(
                titleText = "Delete Supplier",
                submitText = "Delete",
                severity = Severity.DANGER,
                icon = R.drawable.ic_delete_bin_6_line_24dp,
                iconColor = theme.danger,
                singleItemMessage = "|${assets[0].name}| will be deleted. Are you sure you want to delete it?",
                multiItemMessage = "You have selected |${assets.size} data| to be deleted. Are you sure you want to delete it?"

...
